Retire unsupported stock subsystems
Reverse the accidental restoration of script actions, Funcube tuners, MPT-1327 runtime support and channel maps, heterodyne channelization, and sound-card capture while retaining local playback and compatibility-only migration stubs.